# PlusWeb

./: .gitignore  CMakeLists.txt  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  HttpServer.h  Makefile  PlusWebConfig.cmake  main.cpp  myprogram  next_steps.md  structure.txt  utils.cpp  v1.md
.github/workflows/: cmake-single-platform.yml
cmake/: PlusWebConfig.cmake.in
helper/: main.js
helpers/: codesGen.js  http_codes.txt  package-lock.json  package.json
include/PlusWeb/: HttpBody.h  HttpRequest.h  HttpResponse.h  HttpServer.h  RouteRegistry.h  trie.h  utils.h
src/: HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  RouteRegistry.cpp  trie.cpp  utils.cpp
tests/: CMakeLists.txt  test_Get.cpp  test_simple.cpp  test_utils.cpp
